tools/k8s/external.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yukikaze-player-redis
  labels:
    app.kubernetes.io/name: yukikaze-player-redis
    app.kubernetes.io/part-of: yukikaze-player
    app.kubernetes.io/component: external
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: yukikaze-player-redis
    app.kubernetes.io/component: external
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: yukikaze-player-kafka
  labels:
    app.kubernetes.io/name: yukikaze-player-kafka
    app.kubernetes.io/part-of: yukikaze-player
    app.kubernetes.io/component: external
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: yukikaze-player-kafka
    app.kubernetes.io/component: external
  ports:
    - port: 9092
      targetPort: 9092
      name: kafka
---
apiVersion: v1
kind: Service
metadata:
  name: yukikaze-player-rabbitmq
  labels:
    app.kubernetes.io/name: yukikaze-player-rabbitmq
    app.kubernetes.io/part-of: yukikaze-player
    app.kubernetes.io/component: external
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: yukikaze-player-rabbitmq
    app.kubernetes.io/component: external
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: ui
      port: 15672
      targetPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: yukikaze-player-db
  labels:
    app.kubernetes.io/name: yukikaze-player-db
    app.kubernetes.io/part-of: yukikaze-player
    app.kubernetes.io/component: external
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: yukikaze-player-db
    app.kubernetes.io/component: external
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
