tools/k8s/internal.ingress.dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yukikaze-player-ingress-dev
  labels:
    app.kubernetes.io/name: yukikaze-player
    app.kubernetes.io/part-of: yukikaze-player
    app.kubernetes.io/environment: dev
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: yukikaze-player-gateway-dev
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yukikaze-player-app-dev
                port:
                  number: 5173
